src/plugins/platforms/xcb/qxcbwindow.cpp
@@ -1344,6 +1344,12 @@ void QXcbWindow::setWindowIcon(const QIcon &icon)
     }
 
     if (!icon_data.isEmpty()) {
+        // Ignore icon exceeding maximum xcb request length
+        if (size_t(icon_data.size()) > xcb_get_maximum_request_length(xcb_connection())) {
+            qWarning("Ignoring window icon: Size %d exceeds maximum xcb request length %u.",
+                     icon_data.size(), xcb_get_maximum_request_length(xcb_connection()));
+            return;
+        }
         xcb_change_property(xcb_connection(),
                             XCB_PROP_MODE_REPLACE,
                             m_window,
